fix up some remaining issues surfaced by teamscale